--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,6 +27,15 @@
   	<li class="nav-item">
     	<a class="nav-link" href="/">Billionaire</a>
   	</li>
+    <li class="nav-item">
+    	<a class="nav-link" href="about">About</a>
+  	</li>
+    <li class="nav-item">
+    	<a class="nav-link" href="contact">Contact</a>
+    </li >
+    <li class="nav-item">
+    	<a class="nav-link" href="/users">Users</a>
+  	</li>
   	<li class="nav-item">
     	<a class="nav-link" href="soccer">Soccer</a>
   	</li>
